--- a/frontend/src/app/features/marketplace/marketplace-page/marketplace-page.component.html
+++ b/frontend/src/app/features/marketplace/marketplace-page/marketplace-page.component.html
@@ -17,7 +17,7 @@
         >
           <div class="no-posts-found">
             <i class="circle-icon fa-solid fa-magnifying-glass"></i>
-            Products not found
+            {{ "MARKETPLACE-PAGE.PRODUCTS_NOT_FOUND" | translate }}
           </div>
         </div>
 
