--- a/frontend/src/app/features/marketplace/marketplace-product-sell-page/marketplace-product-sell-page.component.html
+++ b/frontend/src/app/features/marketplace/marketplace-product-sell-page/marketplace-product-sell-page.component.html
@@ -12,7 +12,7 @@
       <div class="cool-static-container w-100">
         <div class="f-c-c-c">
           <div class="f-r-c-c">
-            <span class="font-size-24">Create Listing</span>
+            <span class="font-size-24">{{ "MARKETPLACE-PRODUCT-SELL-PAGE.CREATE_LISTING" | translate }}</span>
           </div>
           <div class="divider w-75 mb-3"></div>
         </div>
@@ -41,7 +41,7 @@
                       listingForm.get('title').invalid
                     "
                   >
-                    Title is required.
+                  {{ "MARKETPLACE-PRODUCT-SELL-PAGE.TITLE_IS_REQUIRED" | translate }}
                   </div>
                 </div>
 
@@ -61,7 +61,7 @@
                       listingForm.get('price').invalid
                     "
                   >
-                    Price is required and must be a valid amount.
+                  {{ "MARKETPLACE-PRODUCT-SELL-PAGE.PRICE_IS_REQUIRED" | translate }}
                   </div>
                 </div>
               </div>
@@ -92,7 +92,7 @@
                           <i class="fa fa-plus ms-1"></i>
                         </span>
                         <h3 id="add-photo-text" class="font-weight-bold">
-                          Add photo ({{ images.length }}/3)
+                          {{ "MARKETPLACE-PRODUCT-SELL-PAGE.ADD_PHOTO" | translate }} ({{ images.length }}/3)
                         </h3>
                       </div>
                     </a>
@@ -101,7 +101,7 @@
                     class="f-c-c-c w-100 c-light-text font-weight-normal special-hover mb-3"
                     *ngIf="images.length < 3"
                   >
-                    Select images for your listing (up to 3).
+                  {{ "MARKETPLACE-PRODUCT-SELL-PAGE.SELECT_IMAGES" | translate }}
                   </div>
                   <!-- Preview of uploaded images -->
                   <div class="upload__img-wrap">
@@ -139,7 +139,7 @@
                   listingForm.get('description').invalid
                 "
               >
-                Description is required.
+              {{ "MARKETPLACE-PRODUCT-SELL-PAGE.DESCRIPTION_IS_REQUIRED" | translate }}
               </div>
 
               <!-- DEPARTMENT -->
@@ -149,7 +149,7 @@
                 id="department"
               >
                 <option value="" disabled selected>
-                  -- Select Department --
+                  {{ "MARKETPLACE-PRODUCT-SELL-PAGE.SELECT_DEPARTMENT" | translate }}
                 </option>
                 <option *ngFor="let dept of departmentList" [value]="dept.self">
                   {{ dept.displayName }}
@@ -163,20 +163,20 @@
                   listingForm.get('departmentId').invalid
                 "
               >
-                Department is required.
+              {{ "MARKETPLACE-PRODUCT-SELL-PAGE.DEPARTMENT_IS_REQUIRED" | translate }}
               </div>
 
               <!-- CONDITION -->
               <div class="f-r-c-c w-100 font-size-16 font-weight-normal g-05">
-                This item is:
+                {{ "MARKETPLACE-PRODUCT-SELL-PAGE.THIS_ITEM_IS" | translate }}
                 <div class="w-25">
                   <select
                     formControlName="used"
                     class="cool-input marketplace-input font-weight-bold font-size-14"
                     id="condition"
                   >
-                    <option [value]="false">New</option>
-                    <option [value]="true">Used</option>
+                    <option [value]="false">{{ "MARKETPLACE-PRODUCT-SELL-PAGE.NEW" | translate }}</option>
+                    <option [value]="true">{{ "MARKETPLACE-PRODUCT-SELL-PAGE.USED" | translate }}</option>
                   </select>
                   <div
                     class="error pt-1"
@@ -185,7 +185,7 @@
                       listingForm.get('used').invalid
                     "
                   >
-                    Condition is required.
+                  {{ "MARKETPLACE-PRODUCT-SELL-PAGE.CONDITION_IS_REQUIRED" | translate }}
                   </div>
                 </div>
               </div>
@@ -193,7 +193,7 @@
               <!-- QUANTITY -->
               <div class="f-c-c-c w-100 g-0">
                 <div class="f-r-c-c w-100 font-size-16 font-weight-normal g-05">
-                  Quantity
+                  {{ "MARKETPLACE-PRODUCT-SELL-PAGE.QUANTITY" | translate }}
                   <div>
                     <select
                       formControlName="quantity"
@@ -212,7 +212,7 @@
                     listingForm.get('quantity').invalid
                   "
                 >
-                  Quantity is required.
+                {{ "MARKETPLACE-PRODUCT-SELL-PAGE.QUANTITY_IS_REQUIRED" | translate }}
                 </div>
               </div>
             </div>
@@ -228,7 +228,7 @@
               style="width: 200px"
               type="submit"
             >
-              Create Listing
+            {{ "MARKETPLACE-PRODUCT-SELL-PAGE.CREATE_LISTING" | translate }}
             </button>
           </div>
           <!-- Display validation errors -->
