--- a/frontend/src/app/features/service-providers/service-providers-page/service-providers-page.component.html
+++ b/frontend/src/app/features/service-providers/service-providers-page/service-providers-page.component.html
@@ -17,7 +17,7 @@
   <div class="cool-static-container m-b-20" style="word-wrap: break-word" aria-hidden="true">
     <div class="no-posts-found">
       <i class="circle-icon fa-solid fa-magnifying-glass"></i>
-      <span>We could not find service provider in you neighborhood yet!</span>
+      <span>{{ "SERVICE-PROVIDERS-PAGE.COULD_NOT_FIND" | translate }}</span>
     </div>
   </div>
 </ng-template>
