--- a/frontend/src/app/shared/components/tags-filter-widget/tags-filter-widget.component.html
+++ b/frontend/src/app/shared/components/tags-filter-widget/tags-filter-widget.component.html
@@ -2,7 +2,7 @@
   <div class="f-c-c-s g-0 w-100">
     <div class="f-r-sb-c w-100">
       <h3 class="pt-1 pb-1 m-1 mb-2">
-        {{ mode === "tags" ? "Filter by Tags" : "Filter by Profession" }}
+        {{ mode === "tags" ? ("TAGS-FILTER-WIDGET.TAGS" | translate) : ("TAGS-FILTER-WIDGET.PROFESSIONS" | translate) }}
       </h3>
     </div>
 
