--- a/frontend/src/app/features/service-providers/service-providers-edit-dialog/service-providers-edit-dialog.component.html
+++ b/frontend/src/app/features/service-providers/service-providers-edit-dialog/service-providers-edit-dialog.component.html
@@ -17,7 +17,7 @@
       class="mb-2 mt-3 f-c-c-c c-services font-weight-bold"
       style="font-size: 20px"
     >
-      Edit Profile
+    {{ "SERVICE-PROVIDERS-EDIT-DIALOG.EDIT_PROFILE" | translate }}
     </div>
 
     <!-- Form -->
@@ -46,7 +46,7 @@
             "
             class="error"
           >
-            Business name is required.
+          {{ "SERVICE-PROVIDERS-EDIT-DIALOG.BUSINESS_NAME_IS_REQUIRED" | translate }}
           </p>
 
           <!-- Bio Input -->
@@ -65,7 +65,7 @@
             "
             class="error"
           >
-            Description is required.
+          {{ "SERVICE-PROVIDERS-EDIT-DIALOG.DESCRIPTION_IS_REQUIRED" | translate }}
           </p>
 
           <!-- Phone Number Input -->
@@ -84,7 +84,7 @@
             "
             class="error"
           >
-            Phone number is required.
+          {{ "SERVICE-PROVIDERS-EDIT-DIALOG.PHONE_NUMBER_IS_REQUIRED" | translate }}
           </p>
 
           <!-- Address Input -->
@@ -103,12 +103,12 @@
             "
             class="error"
           >
-            Address is required.
+          {{ "SERVICE-PROVIDERS-EDIT-DIALOG.ADDRESS_IS_REQUIRED" | translate }}
           </p>
         </div>
 
         <!-- Image Upload -->
-        <label for="imageInput1" class="mt-3">Background Image</label>
+        <label for="imageInput1" class="mt-3">{{ "SERVICE-PROVIDERS-EDIT-DIALOG.BACKGROUND_IMAGE" | translate }}</label>
         <input
           id="imageInput1"
           name="imageFile"
@@ -125,7 +125,7 @@
           style="width: 150px"
           [disabled]="editForm.invalid"
         >
-          Save Changes
+        {{ "SERVICE-PROVIDERS-EDIT-DIALOG.SAVE_CHANGES" | translate }}
         </button>
       </div>
     </form>
