--- a/frontend/src/app/features/service-providers/service-providers-reviews-and-posts/service-providers-reviews-and-posts.component.html
+++ b/frontend/src/app/features/service-providers/service-providers-reviews-and-posts/service-providers-reviews-and-posts.component.html
@@ -7,7 +7,7 @@
     [checked]="selectedTab === 'reviews'"
     (change)="onTabChange('reviews')"
   />
-  <label for="tab1">Reviews</label>
+  <label for="tab1">{{ "SERVICE-PROVIDERS-REVIEWS-AND-POSTS.REVIEWS" | translate }}</label>
 
   <input
     id="tab2"
@@ -16,7 +16,7 @@
     [checked]="selectedTab === 'posts'"
     (change)="onTabChange('posts')"
   />
-  <label for="tab2">Posts</label>
+  <label for="tab2">{{ "SERVICE-PROVIDERS-REVIEWS-AND-POSTS.POSTS" | translate }}</label>
 
   <!-- Reviews Tab Content -->
   <section id="content1" *ngIf="selectedTab === 'reviews'">
@@ -30,7 +30,7 @@
       >
         <i class="fa-solid fa-star ml-1"></i>
 
-        Leave a review
+        {{ "SERVICE-PROVIDERS-REVIEWS-AND-POSTS.LEAVE_A_REVIEW" | translate }}
       </button>
 
       <ng-container *ngIf="reviews && reviews.length > 0; else noReviewsFound">
@@ -40,7 +40,7 @@
         >
           <div class="f-r-sb-c w-100">
             <span class="font-size-14 font-weight-normal c-light-text">
-              Annonymous Reviewer
+              {{ "SERVICE-PROVIDERS-REVIEWS-AND-POSTS.ANNONYMOUS_REVIEWER" | translate }}
             </span>
             <div>
               <span class="post-date">
@@ -60,7 +60,7 @@
       <ng-template #noReviewsFound>
         <div class="no-posts-found">
           <i class="circle-icon fa-solid fa-magnifying-glass mb-3"></i>
-          Reviews not found
+          {{ "SERVICE-PROVIDERS-REVIEWS-AND-POSTS.REVIEWS_NOT_FOUND" | translate }}
         </div>
       </ng-template>
 
@@ -83,7 +83,7 @@
         *ngIf="isTheWorker"
         (click)="goToServicePostCreation()"
       >
-        Post
+      {{ "SERVICE-PROVIDERS-REVIEWS-AND-POSTS.POST" | translate }}
       </a>
 
       <ng-container *ngIf="posts && posts.length > 0; else noPostsFound">
@@ -97,7 +97,7 @@
       <ng-template #noPostsFound>
         <div class="no-posts-found w-100">
           <i class="circle-icon fa-solid fa-magnifying-glass mb-3"></i>
-          Posts not found
+          {{ "SERVICE-PROVIDERS-REVIEWS-AND-POSTS.POSTS_NOT_FOUND" | translate }}
         </div>
       </ng-template>
 
